# Organized

./: .gitignore  README.md  app.vue  bun.lockb  capacitor.config.json  components.json  drizzle.config.ts  eemoji.config.ts  eslint.config.js  lin.config.ts  nuxt.config.ts  package-lock.json  package.json  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ADD_INPROGRESS_STATUS.yml  ADD_TODO_STATUS.yml
.lin/: undo.json
core/: Cargo.toml  tauri.conf.json
core/capabilities/: default.json  main.json
core/icons/: icon.icns
core/src/: lib.rs
database/: index.ts  migrate.ts  schema.ts
pages/: index.vue
public/migrations/meta/: 0000_snapshot.json  _journal.json
src/: app.html
src/lib/: i18n.svelte.ts
src/lib/components/: ModuleCard.svelte  Shortcut.svelte
src/lib/database/: index.ts  schema.ts
src/lib/locales/: de-DE.json  en-US.json  es-ES.json  fr-FR.json  hu-HU.json
src/lib/modules/: registry.ts
src/lib/stores/: modules.svelte.ts
src/lib/utils/: tauri.ts
src/modules/: utils.ts
src/modules/finances/: finances.svelte  index.ts  shortcuts.ts  store.svelte.ts
src/modules/grocery/: index.ts  page.svelte
src/modules/shopping/: index.ts  page.svelte  shopping.svelte  store.svelte.ts
src/modules/study/: index.ts  store.svelte.ts  (+1 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
static/migrations/: 0000_curious_sister_grimm.sql  0000_flimsy_jigsaw.sql  0000_motionless_epoch.sql  0000_sloppy_doomsday.sql  0001_neat_wonder_man.sql  0001_zippy_wolfpack.sql
(+54 files in other folders)
